added Projects endpoint
